--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,3 +1,11 @@
+.heading {
+    font-weight: 500;
+    text-align: center;
+}
+.dropdown {
+    float: right;
+}
+
 .controls {
     height: 40px;
     width: calc(100% - 20px);
@@ -9,15 +17,32 @@
     font-size: 1.5em;
     height: 40px;
     display: inline-block;
-    width: calc(100% - 70px);;
 }
-
+.text-container {
+    width: calc(100% - 240px);
+    display: inline-block;
+}
+.repeats {
+    display: inline-block;
+    height: 40px;
+    margin-left: 10px;
+    font-size: 1em;
+    vertical-align: super;
+}
 .selected {
     background-color: var(--accent);
     color: var(--primary);
 }
-.new .text {
-    color: #646464;
+.selected input {
+    color: white;
+}
+
+input {
+    width: 95px !important;
+}
+label {
+    vertical-align: baseline;
+    margin-left: -60px;
 }
 .new i {
     color: #646464;
@@ -35,6 +60,7 @@
 }
 
 .text {
+    display: inline-block;
     vertical-align: super;
 }
 .checkbox-container i {
@@ -44,7 +70,9 @@
 }
 
 .new .text {
-    vertical-align: baseline;
+    width: calc(100% - 250px) !important;
+    color: #646464;
+    vertical-align: inherit;
 }
 .controls .text:focus {
     outline: none;
@@ -80,7 +108,7 @@
     justify-content: center;
 }
 .animations {
-    width: 450px;
+    width: 550px;
     height: calc(100%);
     overflow-y: auto;
     overflow-x: hidden;
@@ -88,13 +116,59 @@
     min-height: 200px;
     flex: 1;
     max-width: 600px;
-    min-width: 400px;
+    min-width: 1000px;
 
 }
 .editor {
     margin: 10px;
-    height: 200px;
+    height: 250px;
     max-width: 600px;
-    min-width: 400px;
-    flex: 2;
+    min-width: 255px;
+    flex: 0;
+}
+.selected button {
+    background-color: var(--accent);
+    color: var(--primary);
+
+}
+.selected button:hover {
+    color: var(--accent);
+    background-color: var(--primary);
+}
+
+.cdk-drag-preview {
+  box-sizing: border-box;
+  border-radius: 4px;
+  background-color: white;
+  z-index: 10;
+  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+              0 8px 10px 1px rgba(0, 0, 0, 0.14),
+              0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+.selected.cdk-drag-preview {
+  background-color: black !important;
+}
+  
+.cdk-drag-placeholder {
+  opacity: 0;
+}
+  
+.cdk-drag-animating {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.animation-list.cdk-drop-list-dragging .controls:not(.cdk-drag-placeholder) {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.text-input {
+    margin-top: 0;
+    font-size: 1em;
+    vertical-align: baseline;
+    border: none;
+    width: 100% !important;
+}
+
+.controls i {
+    cursor: pointer;
 }
